# foo_matrix_nowplaying

./: CMakeLists.txt  HTTP_405_FIX_GUIDE.md  README.md  SOLUTION_SUMMARY.md  build-simple-matrix-x64.bat  build-simple-matrix.bat  foo_matrix_nowplaying.vcxproj
.github/: FUNDING.yml
src/: announce_hotkey.cpp  announce_hotkey.h  darkmode_stub.cpp  main.cpp  matrix_client.cpp  matrix_client.h  play_callback.cpp  play_callback.h  preferences.cpp  preferences.h  resource.h  resource.rc  simple_matrix_client.cpp  simple_matrix_client.h
